@@ -24,6 +24,27 @@ class TestGemCommandsContentsCommand < RubyGemTestCase
     assert_equal "", @ui.error
   end
 
+  def test_execute_all
+    @cmd.options[:all] = true
+
+    quick_gem 'foo' do |gem|
+      gem.files = %w[lib/foo.rb Rakefile]
+    end
+
+    quick_gem 'bar' do |gem|
+      gem.files = %w[lib/bar.rb Rakefile]
+    end
+
+    use_ui @ui do
+      @cmd.execute
+    end
+
+    assert_match %r|lib/foo\.rb|, @ui.output
+    assert_match %r|lib/bar\.rb|, @ui.output
+    assert_match %r|Rakefile|, @ui.output
+    assert_equal "", @ui.error
+  end
+
   def test_execute_bad_gem
     @cmd.options[:args] = %w[foo]
 
@@ -71,6 +92,48 @@ class TestGemCommandsContentsCommand < RubyGemTestCase
 
     assert_match %r|lib/foo\.rb|, @ui.output
     refute_match %r|Rakefile|, @ui.output
+
+    assert_equal "", @ui.error
+  end
+
+  def test_execute_multiple
+    @cmd.options[:args] = %w[foo bar]
+    quick_gem 'foo' do |gem|
+      gem.files = %w[lib/foo.rb Rakefile]
+    end
+
+    quick_gem 'bar' do |gem|
+      gem.files = %w[lib/bar.rb Rakefile]
+    end
+
+    use_ui @ui do
+      @cmd.execute
+    end
+
+    assert_match %r|lib/foo\.rb|, @ui.output
+    assert_match %r|lib/bar\.rb|, @ui.output
+    assert_match %r|Rakefile|, @ui.output
+    assert_equal "", @ui.error
+  end
+
+  def test_execute_no_prefix
+    @cmd.options[:args] = %w[foo]
+    @cmd.options[:prefix] = false
+
+    quick_gem 'foo' do |gem|
+      gem.files = %w[lib/foo.rb Rakefile]
+    end
+
+    use_ui @ui do
+      @cmd.execute
+    end
+
+    expected = <<-EOF
+lib/foo.rb
+Rakefile
+    EOF
+
+    assert_equal expected, @ui.output
 
     assert_equal "", @ui.error
   end
